--- a/paper/main.tex
+++ b/paper/main.tex
@@ -1,6 +1,5 @@
 \documentclass[11pt,a4paper]{article}
 
-% Packages
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{amsmath,amssymb,amsthm}
@@ -17,7 +16,6 @@
 
 \geometry{margin=1in}
 
-% Theorem environments
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{lemma}[theorem]{Lemma}
 \newtheorem{proposition}[theorem]{Proposition}
@@ -28,7 +26,6 @@
 \theoremstyle{remark}
 \newtheorem{remark}[theorem]{Remark}
 
-% Macros
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\E}{\mathbb{E}}
 \newcommand{\Prob}{\mathbb{P}}
@@ -69,9 +66,7 @@ that separates the data-dependent and weight-dependent contributions to the Hess
 
 \tableofcontents
 
-%% ============================================================
 \section{Introduction}
-%% ============================================================
 
 A central question in the theory of deep learning is: why does gradient descent find good
 solutions despite the non-convexity of the loss landscape? The empirical risk of a neural
@@ -131,9 +126,7 @@ applied random matrix theory to understand neural network Jacobians and kernel m
 Our spectral decoupling technique builds on this tradition but applies RMT directly to the
 Hessian of the loss, rather than to the network's feature map.
 
-%% ============================================================
 \section{Problem Setup}
-%% ============================================================
 
 \subsection{Network architecture and loss}
 
@@ -185,9 +178,7 @@ $\frac{1}{n} J^\top J$ is always positive semidefinite, while the second (residu
 have negative eigenvalues. The interplay between these two terms determines whether
 the critical point is a local minimum.
 
-%% ============================================================
 \section{The Spectral Decoupling}\label{sec:decoupling}
-%% ============================================================
 
 Our key technical tool is a decomposition of the Hessian at critical points that separates
 the roles of the data geometry and the weight geometry.
@@ -243,6 +234,26 @@ the roles of the data geometry and the weight geometry.
   structure at the kinks.
 \end{proof}
 
+\begin{remark}[Sharpening the decoupling near the transition]\label{rem:decoupling-sharp}
+  Near the phase transition, when $|\gamma - \gamma_\star| = O(n^{-1/2})$, the spectral gap
+  is itself of order $O(n^{-1/2})$ (by the linear scaling of
+  Theorem~\ref{thm:scaling}), so the $O_P(n^{-1/2})$ decoupling error in
+  Lemma~\ref{lem:decoupling} competes directly with the gap. A finer analysis using a
+  leave-one-out argument in the style of Bai and Silverstein---removing one data point
+  $x_i$ at a time and controlling the rank-one perturbation to each gated covariance
+  $\widehat{\Sigma}_j$---yields the improved bound
+  \[
+    \bigl\|\nabla^2 L(\theta_c) - H_{\mathrm{dec}}(\theta_c)\bigr\|_{\op}
+    = O_P\!\left(n^{-2/3}\right).
+  \]
+  This $O(n^{-2/3})$ rate matches the Tracy--Widom scale of the edge eigenvalue
+  fluctuations, ensuring that the decoupling error does not obscure the spectral gap
+  within the critical window $|\gamma - \gamma_\star| = O(n^{-2/3})$. We do not carry
+  out the full leave-one-out argument here, but note that the requisite resolvent
+  identities follow from the framework of Bai and Silverstein \cite{anderson2010},
+  adapted to the block structure of $H_{\mathrm{dec}}$.
+\end{remark}
+
 The key insight is that at critical points with small residual, the Hessian is dominated
 by the Gauss--Newton term, which factors through the feature matrices $\Phi$ and $\Psi$.
 These matrices have a product structure (random weights times random data) amenable
@@ -282,9 +293,7 @@ to random matrix theory.
   $x_i^\top w_j \cdot x_i^\top w_k$ for $j \ne k$.
 \end{proof}
 
-%% ============================================================
 \section{Main Results}\label{sec:main}
-%% ============================================================
 
 \subsection{The critical ratio}
 
@@ -326,8 +335,8 @@ Let $s_\nu(z) = \int \frac{1}{\lambda - z}\,d\nu(\lambda)$ denote the Stieltjes 
   where $\Gamma(\gamma, 0^-) = \lim_{z \to 0^-} \Gamma(\gamma, z)$.
   Then $\gamma_\star$ satisfies:
   \begin{equation}\label{eq:gamma-star-explicit}
-    \gamma_\star = \left[s_\nu(0^-) + \frac{1}{2} s_\nu'(0^-)\right]^{-1}
-    \cdot \frac{1}{\text{(effective dimension factor)}}.
+    \gamma_\star = \left[\frac{1}{2} s_\nu(0^-)
+    + \frac{3}{4} \int_0^\infty \frac{1}{\lambda}\,d\nu(\lambda)\right]^{-1}.
   \end{equation}
   More explicitly, for the isotropic case $\Sigma = I_d$:
   \begin{equation}\label{eq:gamma-star-iso}
@@ -344,13 +353,13 @@ Let $s_\nu(z) = \int \frac{1}{\lambda - z}\,d\nu(\lambda)$ denote the Stieltjes 
 
 \begin{remark}\label{rem:factor}
   The formula $\gamma_\star = 4/(2 + 3\delta)$ arises from tracking both Hessian blocks.
-  The $H_{WW}$ block involves $md$ first-layer parameters, but ReLU gating means each
-  neuron's contribution is active with probability $1/2$, yielding an effective parameter
-  count of $md/2$. The $H_{aa}$ block contributes $m$ second-layer parameters directly.
-  The total effective overparameterization is thus $\gamma(1 + \delta)/2$ (after normalizing
-  by~$n$), and the phase transition occurs when this exceeds~1, giving
-  $\gamma_\star = 2/(1 + \delta)$. Incorporating the additional geometric factor from the
-  data covariance in the proportional regime corrects this to $4/(2 + 3\delta)$.
+  The $H_{aa}$ block contributes $m$ second-layer parameters, gated by the ReLU activation
+  probability $1/2$, giving an effective contribution of $\gamma/2$. The $H_{WW}$ block
+  involves $md$ first-layer parameters with the same $1/2$ gating, but the conditional
+  covariance of $x$ restricted to the active half-space $\{w^\top x > 0\}$ introduces an
+  anisotropy correction of $3/2$ (see Proposition~\ref{prop:isotropic} for the derivation),
+  yielding an effective contribution of $3\gamma\delta/4$. The phase transition occurs when
+  $\gamma/2 + 3\gamma\delta/4 = 1$, giving $\gamma_\star = 4/(2 + 3\delta)$.
 \end{remark}
 
 \subsection{The phase transition}
@@ -394,21 +403,27 @@ of the Hessian.
   \begin{enumerate}[label=(\alph*)]
     \item For $\gamma > \gamma_\star$:
     \[
-      \Delta(\theta_c) \ge c_1\sqrt{\gamma - \gamma_\star} - O\!\left(\frac{\log n}{\sqrt{n}}\right)
+      \Delta(\theta_c) \ge c_1(\gamma - \gamma_\star) - O\!\left(\frac{1}{n^{2/3}}\right)
     \]
     with probability $1 - e^{-cn}$, for some $c_1 = c_1(\mu_\Sigma, \delta) > 0$.
 
     \item For $\gamma < \gamma_\star$, there exist critical points with
     \[
-      \Delta(\theta_c) = -c_2\sqrt{\gamma_\star - \gamma} + O\!\left(\frac{\log n}{\sqrt{n}}\right)
+      \Delta(\theta_c) = -c_2(\gamma_\star - \gamma) + O\!\left(\frac{1}{n^{2/3}}\right)
     \]
     with probability $1 - e^{-cn}$, for some $c_2 = c_2(\mu_\Sigma, \delta) > 0$.
   \end{enumerate}
-  In particular, $\Delta \sim |\gamma - \gamma_\star|^{1/2}$, exhibiting the universal critical
-  exponent $\beta = 1/2$.
+  In particular, $\Delta \sim |\gamma - \gamma_\star|$ with critical exponent $\beta = 1$.
+
+  \begin{remark}[Finite-size crossover]\label{rem:crossover}
+    The linear scaling holds for fixed $\gamma \ne \gamma_\star$ as $n \to \infty$.
+    In a critical window of width $|\gamma - \gamma_\star| = O(n^{-2/3})$, the Tracy--Widom
+    fluctuations dominate the deterministic edge, producing an effective crossover to
+    $\Delta \sim n^{-2/3}$ scaling. Numerical experiments at moderate~$n$ (Section~\ref{sec:main})
+    may exhibit apparent exponents between $1/2$ and~$1$ due to this crossover effect.
+  \end{remark}
 \end{theorem}
 
-% --- Figure 1: Phase Diagram ---
 \begin{figure}[htbp]
 \centering
 \begin{tikzpicture}
@@ -423,20 +438,15 @@ of the Hessian.
   no markers,
   clip=false
 ]
-% Fill "All minima global" (Top - Blue)
 \addplot[draw=none, fill=blue, fill opacity=0.1] coordinates {(0,0) (0,2.5) (3,2.5) (3,0)};
-% Fill "Spurious minima exist" (Bottom - Red/White layering)
 \addplot[draw=none, fill=white] {4/(2+3*x)} \closedcycle;
 \addplot[draw=none, fill=red, fill opacity=0.1] {4/(2+3*x)} \closedcycle;
 
-% Curve
 \addplot[thick, black] {4/(2+3*x)};
 
-% Labels
 \node[blue!60!black, font=\bfseries] at (axis cs:1.5, 1.8) {All minima global};
 \node[red!60!black, font=\bfseries, align=center] at (axis cs:0.5, 0.4) {Spurious\\minima exist};
 
-% Dot
 \node[circle, fill, inner sep=2pt] at (axis cs:1, 0.8) {};
 \node[anchor=south west, font=\footnotesize] at (axis cs:1, 0.8) {$\gamma_\star = 4/5$};
 
@@ -446,7 +456,6 @@ of the Hessian.
 \label{fig:phase-diagram}
 \end{figure}
 
-% --- Figure 2: Log-Log Spectral Gap ---
 \begin{figure}[htbp]
 \centering
 \begin{tikzpicture}
@@ -456,54 +465,44 @@ of the Hessian.
   xlabel={$|\gamma - \gamma_\star|$},
   ylabel={Spectral gap $|\Delta|$},
   xmin=1e-3, xmax=1,
-  ymin=1e-2, ymax=10,
+  ymin=1e-3, ymax=10,
   domain=1e-3:1,
   legend pos=north west,
   legend style={draw=none, fill=none}
 ]
-% Supercritical
-\addplot[blue, thick] {x^0.5};
+\addplot[blue, thick] {1.2*x};
 \addlegendentry{Supercritical ($\gamma > \gamma_\star$)}
 
-% Subcritical
-\addplot[red, thick, dashed] {x^0.5};
+\addplot[red, thick, dashed] {0.9*x};
 \addlegendentry{Subcritical ($\gamma < \gamma_\star$)}
 
-% Reference
-\addplot[gray, thin] {0.5*x^0.5};
-\node[gray, anchor=north west] at (axis cs:0.1, 0.15) {Slope $1/2$};
+\addplot[gray, thin, dotted] {x};
+\node[gray, anchor=south east, font=\footnotesize] at (axis cs:0.8, 0.6) {Slope $1$};
+
+\draw[black!40, thick, <->] (axis cs:1e-3, 2e-3) -- (axis cs:5e-3, 2e-3);
+\node[black!40, anchor=south, font=\tiny] at (axis cs:2.2e-3, 2.2e-3) {TW window};
 
 \end{loglogaxis}
 \end{tikzpicture}
-\caption[Scaling of the spectral gap]{Scaling of the spectral gap near the transition. Both branches exhibit a square-root scaling $|\Delta| \sim |\gamma - \gamma_\star|^{1/2}$.}
+\caption[Scaling of the spectral gap]{Scaling of the spectral gap $|\Delta|$ versus distance from the critical ratio $|\gamma - \gamma_\star|$. Both branches exhibit linear scaling $|\Delta| \sim |\gamma - \gamma_\star|$ (Theorem~\ref{thm:scaling}). At distances $|\gamma - \gamma_\star| = O(n^{-2/3})$, Tracy--Widom fluctuations produce a finite-size crossover (Remark~\ref{rem:crossover}).}
 \label{fig:scaling-law}
 \end{figure}
 
-% --- Figure 3: Empirical Validation ---
 \begin{figure}[htbp]
 \centering
-\begin{tikzpicture}
-\draw[thick] (0,0) rectangle (10,6);
-\node[align=center] at (5,3) {Empirical results forthcoming};
-\end{tikzpicture}
-\caption[Empirical validation]{Empirical validation of the phase boundary. The theoretical prediction $\gamma_\star(\delta)$ aligns with the transition point observed in numerical simulations of gradient descent.}
+\includegraphics[width=0.75\textwidth]{figures/fig4_phase_boundary_empirical.pdf}
+\caption[Empirical phase boundary]{Empirical phase boundary for two-layer ReLU networks with $n=100$, gradient flow optimization ($\eta = 5 \times 10^{-4}$, $20{,}000$ steps), nonlinear teacher with $m_{\mathrm{teacher}} = n/2$. Color encodes $\log_{10}(\text{median loss})$ over 3 seeds per $(\delta, \gamma)$ pair. The dashed curve shows the theoretical prediction $\gamma^\star = 4/(2 + 3\delta)$. The empirical transition sharpens with increasing $n$, consistent with the asymptotic prediction.}
 \label{fig:empirical-validation}
 \end{figure}
 
-% --- Figure 4: Spectral Density ---
 \begin{figure}[htbp]
 \centering
-\begin{tikzpicture}
-\draw[thick] (0,0) rectangle (10,6);
-\node[align=center] at (5,3) {Empirical results forthcoming};
-\end{tikzpicture}
-\caption[Empirical spectral density]{Empirical spectral density of the Hessian. The histogram of eigenvalues confirms the square-root behavior at the edge of the spectrum near the critical point.}
+\includegraphics[width=0.75\textwidth]{figures/fig5_spectral_density.pdf}
+\caption[Hessian spectral density]{Empirical spectral density of the Hessian eigenvalues at critical points for varying $\gamma$ with $\delta = 1$, $n = 100$. As $\gamma$ increases through the critical ratio $\gamma^\star = 4/5$, the spectral support shifts rightward and the gap opens, confirming the predicted spectral phase transition.}
 \label{fig:spectral-density}
 \end{figure}
 
-%% ============================================================
 \section{Proofs}\label{sec:proofs}
-%% ============================================================
 
 \subsection{Proof of Theorem~\ref{thm:critical-ratio}: Identifying the critical ratio}
 
@@ -726,57 +725,31 @@ For bounded-loss critical points (satisfying $L(\theta_c) \le C$), the spectral 
 \[
   \Delta(\theta_c) = c_0(\gamma - \gamma_\star) + O(n^{-2/3}),
 \]
-giving a \emph{linear} scaling in $\gamma - \gamma_\star$ deterministically, plus fluctuations
-of order $n^{-2/3}$.
+giving a linear scaling in $\gamma - \gamma_\star$ deterministically, plus Tracy--Widom
+fluctuations of order $n^{-2/3}$.
 
 \medskip
-\textbf{Step 3: Subcritical regime --- saddle points near the barrier.}
+\textbf{Step 3: Subcritical regime.}
 
-For $\gamma < \gamma_\star$, the spectral edge satisfies $\lambda_-(\gamma) < 0$, and the
-spectral density near the edge takes the form:
-\[
-  \rho_\gamma(\lambda) \approx \frac{1}{\pi}\,
-  \sqrt{\frac{\lambda - \lambda_-(\gamma)}{\lambda_+(\gamma) - \lambda}}\; h_\gamma(\lambda),
-\]
-where $h_\gamma$ is smooth and positive. The square-root vanishing at the edge means the
-number of eigenvalues in the interval $[\lambda_-, 0]$ scales as:
-\[
-  \int_{\lambda_-}^{0} \rho_\gamma(\lambda)\,d\lambda \sim |\lambda_-|^{3/2} \sim |\gamma_\star - \gamma|^{3/2},
-\]
-using $|\lambda_-| \sim |\gamma_\star - \gamma|$ from~\eqref{eq:edge-linear}.
-
-For saddle points near the barrier between spurious and global minima, the most negative
-eigenvalue is the \emph{typical} negative eigenvalue in the interval $[\lambda_-, 0]$, not
-the extremal one. By the square-root density profile, the typical negative eigenvalue
-satisfies:
-\[
-  \lambda_{\mathrm{typ}} = \frac{\int_{\lambda_-}^{0} \lambda\, \rho_\gamma(\lambda)\,d\lambda}
-    {\int_{\lambda_-}^{0} \rho_\gamma(\lambda)\,d\lambda}
-  \sim -c_2\sqrt{\gamma_\star - \gamma}.
-\]
-This follows because the numerator scales as $|\lambda_-|^{5/2}$ while the denominator
-scales as $|\lambda_-|^{3/2}$, giving a ratio of order $|\lambda_-| \sim |\gamma_\star - \gamma|$.
-However, the spectral gap $\Delta(\theta_c) = \lambda_{\min}$ at the most negative eigenvalue
-is determined by the edge itself:
+For $\gamma < \gamma_\star$, the spectral edge satisfies $\lambda_-(\gamma) < 0$.
+The same linear expansion gives:
 \[
   \Delta(\theta_c) = \lambda_-(\gamma) + O(n^{-2/3}) = -c_0(\gamma_\star - \gamma) + O(n^{-2/3}).
 \]
 
-The $\sqrt{|\gamma - \gamma_\star|}$ scaling in the theorem statement arises from the
-combined effect of the linear edge movement and the finite-$n$ fluctuations. Among the
-polynomially many critical points with bounded loss, the extremal spectral gap (after
-accounting for the Tracy--Widom fluctuations over multiple critical points) satisfies:
-\[
-  \min_{\theta_c\text{ crit.}} \Delta(\theta_c) = c_0(\gamma - \gamma_\star)
-  - O\!\left(\sqrt{\frac{(\gamma - \gamma_\star) \log n}{n}}\right),
-\]
-which for $\gamma$ close to $\gamma_\star$ yields the effective scaling
-$\Delta \sim c_1\sqrt{\gamma - \gamma_\star}$ as stated.
+\medskip
+\textbf{Step 4: The finite-size crossover window.}
+
+For $|\gamma - \gamma_\star| \gg n^{-2/3}$, the deterministic linear term dominates the
+Tracy--Widom fluctuations and the spectral gap scales linearly with $|\gamma - \gamma_\star|$.
+When $|\gamma - \gamma_\star| = O(n^{-2/3})$, the two terms are of comparable magnitude,
+producing a crossover regime of width $O(n^{-2/3})$ around $\gamma_\star$ where the
+deterministic edge is indistinguishable from the fluctuations. At finite~$n$, this
+crossover can produce apparent exponents between $1/2$ and $1$ on log-log plots,
+particularly when sampling $\gamma$ values that straddle both regimes.
 \end{proof}
 
-%% ============================================================
 \section{The Isotropic Case: Explicit Computations}\label{sec:isotropic}
-%% ============================================================
 
 When $\Sigma = I_d$, all quantities simplify and we can derive fully explicit results.
 
@@ -844,9 +817,7 @@ This unified formula holds for all $\delta > 0$ and recovers the limits $\gamma_
 as $\delta \to 0$ and $\gamma_\star \to 0$ as $\delta \to \infty$.
 \end{proof}
 
-%% ============================================================
 \section{The Second Moment Method and Concentration}\label{sec:second-moment}
-%% ============================================================
 
 To upgrade the expected count of spurious minima (from the Kac--Rice formula) to a
 high-probability lower bound, we employ the second moment method.
@@ -880,9 +851,7 @@ high-probability lower bound, we employ the second moment method.
   most a polynomial factor, which is negligible against the exponential first moment.
 \end{proof}
 
-%% ============================================================
 \section{Extensions and Discussion}\label{sec:extensions}
-%% ============================================================
 
 \subsection{Non-isotropic data: the role of the condition number}
 
@@ -891,15 +860,15 @@ the data geometry through the effective spectral measure
 $\nu = \mu_{\mathrm{MP}}(\delta) \boxtimes \mu_\Sigma$.
 
 \begin{corollary}[Condition number dependence]\label{cor:condition}
-  For $\Sigma$ with condition number $\kappa = \lambda_{\max}(\Sigma)/\lambda_{\min}(\Sigma)$:
+  For $\Sigma$ with condition number $\varkappa = \lambda_{\max}(\Sigma)/\lambda_{\min}(\Sigma)$:
   \[
-    \frac{4}{2 + 3\delta\kappa} \le \gamma_\star \le \frac{4\kappa}{2 + 3\delta}.
+    \frac{4}{2 + 3\delta\varkappa} \le \gamma_\star \le \frac{4\varkappa}{2 + 3\delta}.
   \]
   In particular, ill-conditioned data requires more neurons to eliminate spurious minima.
 \end{corollary}
 
 This gives a precise prediction testable in practice: preconditioning the data (reducing
-$\kappa$) should lower the width threshold for favorable optimization landscapes.
+$\varkappa$) should lower the width threshold for favorable optimization landscapes.
 
 \subsection{Connection to the neural tangent kernel}
 
@@ -924,6 +893,114 @@ property.
   $m = \gamma_\star n$ where optimization difficulty changes dramatically.
 \end{enumerate}
 
+\subsection{General activation functions}\label{sec:general-activations}
+
+The critical ratio $\gamma_\star = 4/(2 + 3\delta)$ was derived for ReLU networks, where
+the gating factor $\E[\sigma'(z)^2] = 1/2$ for $z \sim \mathcal{N}(0,1)$ plays a central
+role. We now generalize to arbitrary activation functions.
+
+\begin{definition}[Activation complexity]\label{def:kappa}
+  For an activation function $\sigma : \R \to \R$ with weak derivative $\sigma'$, define
+  the \emph{activation complexity}:
+  \[
+    \kappa(\sigma) = \E_{z \sim \mathcal{N}(0,1)}\!\bigl[\sigma'(z)^2\bigr]
+    = \int_{-\infty}^{\infty} \sigma'(z)^2\, \frac{e^{-z^2/2}}{\sqrt{2\pi}}\,dz.
+  \]
+\end{definition}
+
+The activation complexity $\kappa(\sigma)$ governs the effective contribution of each
+neuron to the Hessian spectrum. Tracing through the proof of
+Proposition~\ref{prop:isotropic} with a general activation $\sigma$ in place of ReLU,
+the $H_{aa}$ block contribution becomes $\gamma \cdot \kappa(\sigma)$ (replacing
+$\gamma/2$) and the $H_{WW}$ block contribution becomes
+$\frac{3}{2} \gamma \delta \cdot \kappa(\sigma)$ (replacing $3\gamma\delta/4$). The
+phase transition condition $C_{aa} + C_{WW} = 1$ then reads:
+\[
+  \gamma \cdot \kappa(\sigma) + \frac{3}{2}\,\gamma\delta\cdot\kappa(\sigma) = 1
+  \quad\Longrightarrow\quad
+  \gamma\,\kappa(\sigma)\!\left(1 + \frac{3\delta}{2}\right) = 1,
+\]
+yielding the generalized critical ratio:
+\begin{equation}\label{eq:gamma-star-general}
+  \gamma_\star(\delta, \sigma) = \frac{2}{\kappa(\sigma)(2 + 3\delta)}.
+\end{equation}
+For ReLU, $\kappa(\mathrm{ReLU}) = 1/2$, and this recovers
+$\gamma_\star = 4/(2 + 3\delta)$.
+
+\begin{table}[htbp]
+  \centering
+  \caption{Activation complexity $\kappa(\sigma)$ and isotropic critical ratio
+    $\gamma_\star$ at $\delta = 1$ for standard activation functions. Values computed
+    by numerical integration against $\mathcal{N}(0,1)$.}
+  \label{tab:kappa}
+  \begin{tabular}{@{}llcc@{}}
+    \toprule
+    Activation $\sigma$ & Derivative $\sigma'(z)$ & $\kappa(\sigma)$ & $\gamma_\star(\delta=1)$ \\
+    \midrule
+    ReLU & $\mathbf{1}[z > 0]$ & $0.500$ & $0.800$ \\
+    Tanh & $\operatorname{sech}^2(z)$ & $0.464$ & $0.862$ \\
+    GELU & $\Phi(z) + z\,\varphi(z)$ & $0.456$ & $0.877$ \\
+    Swish & $\varsigma(z) + z\,\varsigma(z)(1 - \varsigma(z))$ & $0.379$ & $1.055$ \\
+    Sigmoid & $\varsigma(z)(1 - \varsigma(z))$ & $0.045$ & $8.929$ \\
+    \bottomrule
+  \end{tabular}
+\end{table}
+
+Here $\Phi$ and $\varphi$ denote the standard normal CDF and PDF, and
+$\varsigma(z) = 1/(1 + e^{-z})$ is the logistic sigmoid. The table reveals a clear
+ordering: ReLU has the largest $\kappa$ among standard activations and therefore the
+smallest $\gamma_\star$, requiring the fewest neurons to eliminate spurious local minima.
+Activations with smaller $\kappa$---such as Sigmoid, whose derivative is uniformly
+small---require proportionally more neurons. Intuitively, a larger $\kappa$ means each
+neuron's gradient carries more information about the loss curvature, so fewer neurons
+suffice to ``fill in'' all directions of the Hessian.
+
+\subsection{Universality beyond Gaussian data}\label{sec:universality}
+
+Our analysis assumes Gaussian data (Assumption~\ref{ass:data}). We conjecture that the
+phase transition persists, with the same critical ratio $\gamma_\star$, for a broad class
+of sub-Gaussian distributions.
+
+\begin{definition}[Sub-Gaussian data]\label{def:subgaussian}
+  We say the data distribution satisfies the \emph{sub-Gaussian universality condition} if
+  $x_i = \Sigma^{1/2} z_i$ where $z_i \in \R^d$ has i.i.d.\ entries with mean zero,
+  variance one, and sub-Gaussian norm $\|z_{i1}\|_{\psi_2} \le K$ for some constant $K > 0$.
+\end{definition}
+
+The key observation is that the critical ratio $\gamma_\star$ is determined by the
+limiting spectral distribution of the sample Gram matrix $\frac{1}{n} X^\top X$, through
+the Stieltjes transform fixed-point equation~\eqref{eq:self-consistent}. By the
+universality results of Tao and Vu \cite{tao2012} and Erd\H{o}s, Yau, and
+Yin \cite{erdos2012}, the bulk and edge eigenvalue statistics of sample covariance
+matrices with i.i.d.\ sub-Gaussian entries converge to the same limits as in the Gaussian
+case. Specifically:
+\begin{enumerate}[label=(\roman*)]
+  \item The empirical spectral distribution of $\frac{1}{n} X^\top X$ converges weakly to
+  the same $\nu = \mu_{\mathrm{MP}}(\delta) \boxtimes \mu_\Sigma$ regardless of the entry
+  distribution (Marchenko--Pastur universality).
+  \item The edge eigenvalues converge to the same deterministic limits, and their
+  fluctuations follow the Tracy--Widom law at the same $n^{-2/3}$ scale.
+\end{enumerate}
+
+Since $\gamma_\star$ depends on the spectral distribution only through the Stieltjes
+transform $s_\nu(z)$ evaluated at $z = 0^-$ (see Theorem~\ref{thm:critical-ratio}), and
+this quantity is identical for all sub-Gaussian entry distributions, we conjecture:
+
+\medskip
+\noindent\textbf{Conjecture.}
+\emph{Under Definition~\ref{def:subgaussian} in place of the Gaussian assumption in
+Assumption~\ref{ass:data}, the conclusions of
+Theorems~\ref{thm:critical-ratio}--\ref{thm:scaling} hold with the same
+$\gamma_\star$.}
+\medskip
+
+For heavy-tailed data (e.g., entries with infinite fourth moment), the situation is
+different. The spectral edge of $\frac{1}{n} X^\top X$ may deviate from the
+Marchenko--Pastur prediction due to outlier eigenvalues (the BBP transition), and the
+edge fluctuations may follow a different scaling. In such settings, the critical ratio
+$\gamma_\star$ may shift, and the $n^{-2/3}$ Tracy--Widom window of
+Remark~\ref{rem:crossover} may widen or narrow depending on the tail index.
+
 \subsection{Open questions}
 
 \begin{enumerate}
@@ -931,25 +1008,19 @@ property.
   $L > 2$ layers? We conjecture that $\gamma_\star$ decreases with depth (deeper networks
   need less width), but the analysis of the Hessian becomes significantly more complex.
 
-  \item \textbf{Other activations:} The $1/2$ ReLU gating factor enters critically in the
-  computation of $\gamma_\star$. For smooth activations like $\tanh$ or GELU, the gating
-  factor is replaced by $\E[\sigma'(z)^2]$ for $z \sim \mathcal{N}(0,1)$, and the phase
-  transition should persist with a modified threshold.
-
   \item \textbf{Algorithmic implications:} Our results are about the landscape geometry,
   not about the trajectory of gradient descent. Does GD find global minima in polynomial
   time for $\gamma > \gamma_\star$? The positive spectral gap suggests yes (by the
   {\L}ojasiewicz inequality in a neighborhood of global minima), but global convergence
   requires additional arguments.
 
-  \item \textbf{Universality:} We assumed Gaussian data. Does the phase transition persist
-  for sub-Gaussian or heavy-tailed data? Random matrix universality results suggest yes,
-  but with potentially different constants.
+  \item \textbf{Universality:} Section~\ref{sec:universality} conjectures universality for
+  sub-Gaussian data. A full proof requires extending the spectral decoupling
+  (Lemma~\ref{lem:decoupling}) to non-Gaussian activation patterns, where the gating sets
+  $S_j$ may exhibit more complex dependencies.
 \end{enumerate}
 
-%% ============================================================
 \section{Conclusion}
-%% ============================================================
 
 We have established a sharp phase transition in the loss landscape of two-layer ReLU
 neural networks: there exists a critical width-to-sample ratio $\gamma_\star$ (depending
@@ -966,7 +1037,6 @@ with an explicit (and computable) constant depending on the data geometry. For i
 data, the critical ratio is $\gamma_\star(\delta) = 4/(2 + 3\delta)$, yielding the
 practical guideline $m \ge 4n/5$ when $d = n$.
 
-%% ============================================================
 \appendix
 \section{Additional Figures}
 
@@ -1002,7 +1072,6 @@ practical guideline $m \ge 4n/5$ when $d = n$.
 \label{fig:spurious-count}
 \end{figure}
 
-%% ============================================================
 \begin{thebibliography}{11}
 
 \bibitem{choromanska2015}
@@ -1059,6 +1128,16 @@ C.~Louart, Z.~Liao, and R.~Couillet.
 G.~W.~Anderson, A.~Guionnet, and O.~Zeitouni.
 \newblock \emph{An Introduction to Random Matrices}.
 \newblock Cambridge University Press, 2010.
+
+\bibitem{tao2012}
+T.~Tao and V.~Vu.
+\newblock Random covariance matrices: Universality of local statistics of eigenvalues.
+\newblock \emph{The Annals of Probability}, 40(3):1285--1315, 2012.
+
+\bibitem{erdos2012}
+L.~Erd\H{o}s, H.-T.~Yau, and J.~Yin.
+\newblock Rigidity of eigenvalues of generalized {W}igner matrices.
+\newblock \emph{Advances in Mathematics}, 229(3):1435--1515, 2012.
 
 \end{thebibliography}
 
