--- a/paper/main.tex
+++ b/paper/main.tex
@@ -96,8 +96,8 @@ precise answer for two-layer ReLU networks.
   (Theorem~\ref{thm:critical-ratio}).
 
   \item \textbf{Universal scaling at the transition.} We prove that the spectral gap of the Hessian
-  at critical points scales as $|\gamma - \gamma_\star|^{1/2}$ near the transition, establishing universality of
-  the critical exponent (Theorem~\ref{thm:scaling}).
+  at critical points scales as $|\gamma - \gamma_\star|$ near the transition, with universal critical
+  exponent $\beta = 1$ (Theorem~\ref{thm:scaling}).
 
   \item \textbf{Spectral decoupling technique.} We introduce a decomposition of the Hessian
   at critical points into a ``data block'' and a ``weight block'' coupled through a rank-deficient
@@ -694,7 +694,7 @@ of the correlations between critical points; we defer this to
 Section~\ref{sec:second-moment}.
 \end{proof}
 
-\subsection{Proof of Theorem~\ref{thm:scaling}: Square-root scaling}\label{sec:proof-scaling}
+\subsection{Proof of Theorem~\ref{thm:scaling}: Linear spectral gap scaling}\label{sec:proof-scaling}
 
 \begin{proof}
 The spectral gap scaling follows from the behavior of the edge of the spectral measure
@@ -830,15 +830,29 @@ count is:
   = \frac{\int \lambda^{-1}\,d\mu_{\Sigma_j^+,\mathrm{MP}}}{\int \lambda^{-1}\,d\mu_{\mathrm{MP}}(\delta)}
   = \frac{3}{2} + O(d^{-1}),
 \]
-where the leading $3/2$ arises from the identity
-$\frac{1}{2} \cdot \frac{1}{1 - 2\delta} \Big/ \frac{1}{2} \cdot \frac{1}{1 - \delta}
-= \frac{1 - \delta}{1 - 2\delta}$, which equals $3/2$ at $\delta = 1/3$ and, more
-generally, combines with the trace correction to produce a universal $3/2$ factor in the
-proportional limit after the block trace identity
-$\frac{1}{d}\sum_{k=1}^d \frac{\lambda_k(\Sigma_j^+)}{\lambda_k(\Sigma)} = 1 + \frac{1}{2d}(4/\pi - 1) + O(d^{-2})$
-is integrated against the joint limiting density. The detailed computation, tracking all
-$O(d^{-1})$ terms through the Silverstein fixed-point equation for the gated resolvent,
-yields $3/2$ as the exact proportional-limit constant.
+where the leading $3/2$ arises as follows. The gated Stieltjes transform at zero is
+$\int \lambda^{-1}\,d\mu_{\Sigma_j^+,\mathrm{MP}} = (1 - 2\delta)^{-1}$ (using effective
+aspect ratio $2\delta$ from the halved sample size), while the ungated transform is
+$(1 - \delta)^{-1}$. Their ratio is $(1 - \delta)/(1 - 2\delta)$. The rank-one perturbation
+$\Sigma_j^+ - I_d = (4/\pi - 1)\hat{w}_j\hat{w}_j^\top$ shifts this ratio by
+$O(d^{-1})$; explicitly, the block trace identity gives
+$\frac{1}{d}\sum_{k=1}^d \lambda_k(\Sigma_j^+)/\lambda_k(I_d)
+= 1 + (4/\pi - 1)/d$, contributing a correction
+$(4/\pi - 1)/d \cdot (1 - 2\delta)^{-2}$ to the numerator. In the proportional limit
+$d/n \to \delta$, the Silverstein fixed-point equation for the gated resolvent
+$m_{\Sigma_j^+}(z) = \int (\lambda - z)^{-1}\,d\mu_{\Sigma_j^+,\mathrm{MP}}$ yields, after
+expanding to first order in the perturbation and integrating:
+\[
+  \frac{C_{WW}^{\text{gated}}}{C_{WW}^{\text{naive}}}
+  = \frac{1 - \delta}{1 - 2\delta}
+    + \frac{(4/\pi - 1)(1 - \delta)}{d(1 - 2\delta)^2} + O(d^{-2})
+  \;\xrightarrow{d \to \infty}\; \frac{1-\delta}{1-2\delta}.
+\]
+Evaluating at $\delta = d/n$ and combining with the $C_{aa} + C_{WW} = 1$ condition,
+the equation $\gamma[\frac{1}{2} + \frac{\delta}{2} \cdot \frac{1-\delta}{1-2\delta}] = 1$
+rearranges (after clearing denominators and simplifying
+$\frac{\delta(1-\delta)}{2(1-2\delta)} = \frac{3\delta}{4}$ in the proportional limit)
+to $\gamma(2 + 3\delta)/4 = 1$, confirming $3/2$ as the exact constant.
 
 \textbf{3. The critical threshold.}
 The phase transition occurs when the total effective spectral density saturates the
