--- a/paper/main.tex
+++ b/paper/main.tex
@@ -468,19 +468,19 @@ of the Hessian.
   ymin=1e-3, ymax=10,
   domain=1e-3:1,
   legend pos=north west,
-  legend style={draw=none, fill=none}
+  legend style={draw=none, fill=none, font=\small}
 ]
-\addplot[blue, thick] {1.2*x};
+\addplot[blue, thick] {1.5*x};
 \addlegendentry{Supercritical ($\gamma > \gamma_\star$)}
 
-\addplot[red, thick, dashed] {0.9*x};
+\addplot[red, thick, dashed] {0.7*x};
 \addlegendentry{Subcritical ($\gamma < \gamma_\star$)}
 
 \addplot[gray, thin, dotted] {x};
-\node[gray, anchor=south east, font=\footnotesize] at (axis cs:0.8, 0.6) {Slope $1$};
+\node[gray, anchor=south west, font=\footnotesize] at (axis cs:0.35, 0.5) {Slope $1$};
 
-\draw[black!40, thick, <->] (axis cs:1e-3, 2e-3) -- (axis cs:5e-3, 2e-3);
-\node[black!40, anchor=south, font=\tiny] at (axis cs:2.2e-3, 2.2e-3) {TW window};
+\draw[black!50, thick, <->] (axis cs:1e-3, 5e-3) -- (axis cs:5e-3, 5e-3);
+\node[black!50, anchor=south, font=\scriptsize] at (axis cs:2.2e-3, 5.5e-3) {TW window};
 
 \end{loglogaxis}
 \end{tikzpicture}
